Fix null pointer access warnings and complete linter cleanup
- Fixed 8 null pointer access warnings with proper null checks
- Fixed 5 unused variables/fields warnings
- All 229 linter warnings now resolved (100% reduction)
- Code is safer with proper defensive programming practices
- Build successful, no compilation errors

Files modified:
- CoderTests.java, WebElementTableTests.java, DataTests.java
- BingPage.java, ParameterHelper.java, Reports.java
- ClaimsAndSpendingPage.java, YMAPIMethodsTests.java
- ISelenium.java, Page.java, DailyPollQuizPages.java, Processes.java